test/cases/compile_errors/redundant_comptime_var.zig
comptime {
    comptime var x = undefined;
}

// error
//
// :2:5: error: 'comptime var' is redundant in comptime scope
